--- a/public/campaignlist_widget.css
+++ b/public/campaignlist_widget.css
@@ -4,12 +4,13 @@
     background-color: #ddf;
 }
 .camps-title {
-    font-size:24px;
+    display:inline-block;
+    font-size:16px;
     font-weight:bold;
 }
 .camps-username {
     display:inline-block;
-    font-size:24px;
-    width: 100px;
+    font-size:16px;
+    width: 15em;
 }
 
