Old description-appears-below-the-table was already working. Added a border to the new div to make it more obvious. Commiting this. But I still want to try a popup...

--- a/public/main.css
+++ b/public/main.css
@@ -13,6 +13,9 @@
 }
 
 #hintbox {
+    border:3px solid blue;
+    width:50%;
+    padding: 20px;
     z-index:10;
     background:white;
     position:absolute;
