--- a/public/main.css
+++ b/public/main.css
@@ -18,7 +18,7 @@
     padding: 20px;
     z-index:10;
     background:white;
-    position:absolute;
+    position:fixed;
     left:100px;
     top:100px;
     display:none;
