Click just one place to delete an array item, not anywhere on the item

--- a/public/rwb_widget.css
+++ b/public/rwb_widget.css
@@ -22,6 +22,10 @@
 .rwb-field-data-arrayitem {
     margin: 0px 0px 20px 0px;
 }
+.rwb-field-data-arrayitem-delete {
+    text-align: right;
+    color:red;
+}
 .hintlink {
     color: blue;
 }
