--- a/public/main.css
+++ b/public/main.css
@@ -1,16 +1,26 @@
+
 #controls-container {
-    width:250px;
+    width:230px;
     float:left;
+    margin: 0px;
+    padding: 0px;
 }
 #user-container {
-
+    border: 1px solid #00f;
+    padding: 10px;
+    margin: 0 10px 10px 10px;
 }
 #camplist-container {
-
+    border: 1px solid #00f;
+    padding: 10px;
+    margin: 10px;
 }
 #campaign-container {
-    margin-left: 260px;
+    margin-left: 250px;
     margin-right:100px;
+    margin-top: 30px;
+    border: 1px solid #00f;
+    padding: 10px;
 }
 
 #hintbox {
