--- a/public/campaignlist_widget.css
+++ b/public/campaignlist_widget.css
@@ -1,16 +1,9 @@
 .camps-camp {
-    margin-bottom:10px;
-    border: 1px solid blue;
-    background-color: #ddf;
+    
 }
 .camps-title {
-    display:inline-block;
-    font-size:16px;
     font-weight:bold;
+    color: blue;
 }
-.camps-username {
-    display:inline-block;
-    font-size:16px;
-    width: 15em;
-}
+
 
