--- a/public/user_widget.css
+++ b/public/user_widget.css
@@ -1,9 +1,6 @@
-#user-dropdown {
-    border: 1px solid blue;
-    background-color: #ddf;
-    
+#user-notloggedin-message1 {
+    text-align: center;
 }
-#user-dropdown-less {
-    border: 3px solid blue;
-    background-color: #ddf;
+#user-notloggedin-message2 {
+    color: red;
 }
