Save box works (but is ugly)

--- a/public/main.css
+++ b/public/main.css
@@ -40,3 +40,22 @@ h2 {
     display:none;
 }
 
+#savebox {
+    border:3px solid black;
+    padding: 20px;
+    z-index:10;
+    background:white;
+    position:fixed;
+    left:20px;
+    top:20px;
+    display:none;
+}
+#savebox-content {
+    height: 200px;
+    width: 300px;
+}
+#savebox-label {
+    border: 1px solid black;
+    background: #ddd;
+}
+
