--- a/public/main.css
+++ b/public/main.css
@@ -27,6 +27,9 @@ h2 {
     border: 1px solid #00f;
     padding: 10px;
 }
+.campaign-author-credit {
+    text-align: right;
+}
 
 #hintbox {
     border:3px solid blue;
