--- a/public/rpgworldbuilder.css
+++ b/public/rpgworldbuilder.css
@@ -1,6 +1,12 @@
 body {
     font-family: sans-serif;
 }
+#pagewrap {
+    max-width: 900px;
+    margin-left: auto;
+    margin-right: auto;
+
+}
 h2 {
     margin: 0px;
 }
@@ -22,7 +28,7 @@ h2 {
 }
 #campaign-container {
     margin-left: 250px;
-    margin-right:100px;
+   /* margin-right:100px;*/
     margin-top: 30px;
     border: 1px solid #00f;
     padding: 10px;
