--- a/public/rpgworldbuilder.css
+++ b/public/rpgworldbuilder.css
@@ -5,7 +5,7 @@ body {
 }
 button {
     color: #ddd;
-    background: #421;
+    background: #333;
     border: 1px solid #877;
     font-size: 18px;
 }
@@ -86,7 +86,10 @@ h2 {
     float:right;
 }
 .hintlink {
-    color: blue;
+    color: #88f;
+}
+.hintlink:hover {
+    color: white;
 }
 input {
     width: 100%;
@@ -97,11 +100,12 @@ textarea {
 /****************************/
 
 #hintbox {
-    border:3px solid blue;
+    border:4px solid #bbf;
     width:50%;
-    padding: 5%px;
+    padding: 20%px;
     z-index:10;
     background:white;
+    color: black;
     position:fixed;
     left:100px;
     top:100px;
