--- a/public/rpgworldbuilder.css
+++ b/public/rpgworldbuilder.css
@@ -14,7 +14,7 @@ select {
 }
 input, textarea{
     background: #222;
-    color: #fe0;
+    color: #ec0;
 }
 textarea {
 }
@@ -82,6 +82,7 @@ select {
 input, textarea{
     padding: 5px;
     font-size: 20px;
+    font-family: sans-serif;
 }
 textarea {
     font-size: 20px;
