Use "user's words" emphasis color on static view, too.

--- a/public/rpgworldbuilder.css
+++ b/public/rpgworldbuilder.css
@@ -27,6 +27,9 @@ h2 {
 .campaign-arrayfield-item-delete {
     color:red;
 }
+.campaign-static-view-item {
+    color: #ec0;
+}
 .hintlink {
     color: #88f;
 }
