--- a/public/rpgworldbuilder.css
+++ b/public/rpgworldbuilder.css
@@ -182,7 +182,7 @@ table {
 #hintbox {
     border:4px solid #bbf;
     width:50%;
-    padding: 20%px;
+    padding: 20px;
     z-index:10;
     position:fixed;
     left:100px;
