--- a/public/index.css
+++ b/public/index.css
@@ -6,6 +6,7 @@ body {
 
 #try-it {
     float:right;
+    margin-left: 30px;
     font-size: 24px;
     color:red;
     padding: 80px 50px;
@@ -27,6 +28,11 @@ body {
 }
 
 .short-hint {
-    margin-left: 40px;
+    float:left;
+    width:200px;
+    height:300px;
+    border:1px solid #666;
+    padding: 10px;
+    margin: 10px;
 }
 
